@@ -15,6 +15,9 @@ For a complete change history, please see the Subversion log comments.
 Version 5.6.0-beta3 (2009-10-07):
 ---------------------------------
 
+- Enable output of geometry in GML GetFeatureInfo if wms_geometries and
+  wms_geom_type are specified (#2989)
+
 - fix URN typo in mapwfs.c for urn:EPSG:geographicCRS:...
 
 - don't apply scalefactor to label outlines (#3157)
